# StartNode

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SPEC_StartNode.md  imrefl.hpp  imrefl_glm.hpp
StartNode/: CMakeLists.txt
StartNode/src/meta_core/: CMakeLists.txt
StartNode/src/meta_core/include/StartNode/Meta/: MetaCore.hpp
StartNode/src/reflect/: CMakeLists.txt
StartNode/src/reflect/include/StartNode/Reflect/: Annotations.hpp  Format.hpp  Json.hpp  Serialize.hpp  TypeDescriptor.hpp  TypeId.hpp  TypeRegistry.hpp
StartNode/src/reflect/src/: Json.cpp  Serialize.cpp  TypeRegistry.cpp
StartNode/tests/reflect_tests/: CMakeLists.txt
StartNode/tests/reflect_tests/src/: TestFormat.cpp  TestJson.cpp  TestMetaCore.cpp  TestSerialize.cpp  TestTypeId.cpp  TestTypeIdCrossTU_A.cpp  TestTypeIdCrossTU_B.cpp  TestTypeIdShared.hpp  TestTypeRegistry.cpp
docs/superpowers/plans/: 2026-06-18-startnode-reflect.md
docs/superpowers/specs/: 2026-06-18-startnode-reflect-design.md
example/: CMakeLists.txt  example.cpp
